# flywheel

./: .gitignore  CHANGELOG.md  LEARNINGS.md  Makefile  README.md  TODO.md  WALKTHROUGH.md  cookiecutter.json  pyproject.toml
examples/nhtsa_complaints/: data.csv  flywheel.yaml  users.yaml
examples/vehicle_safety/: flywheel.yaml  users.yaml
fake_data/: generate.py  sample.csv
scripts/: bootstrap_auth.py  generate.sh  ingest_data.py  sample_nhtsa.py  serve.sh  simulate_labelers.py
tests/compliance/: conftest.py  test_generation.py  test_notebooks.py  test_reconciliation.py  test_rendering.py  test_submission.py
{{cookiecutter.project_slug}}/: flywheel.yaml
{{cookiecutter.project_slug}}/notebooks/: analysis.py  export.py
{{cookiecutter.project_slug}}/plugin/: flywheel_plugin.py
